# literature-management

./: .gitignore  COMPLETED_FEATURES.md  FEATURES_DOI_PDF.md  QUICKSTART.md  README.md  START.md  SUMMARY.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260316_0000_initial_schema.py  20260316_0001_add_paper_files.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: citations.py  journals.py  notes.py  paper_files.py  papers.py  search.py  tasks.py
backend/app/models/: __init__.py  base.py  citation.py  journal.py  note.py  paper.py  paper_file.py  task.py
backend/app/schemas/: __init__.py  citation.py  journal.py  note.py  paper.py  paper_file.py  task.py
backend/app/services/: doi_fetcher.py
backend/app/tasks/: __init__.py  celery_app.py  citation_updater.py  metadata_scraper.py  scheduled_tasks.py
backend/scripts/: init_db.py  setup.sh
docker/: Dockerfile.backend  Dockerfile.backend.simple  Dockerfile.frontend  docker-compose.yml
docs/: architecture.md  development_plan.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: PDFViewer.tsx  PaperFiles.tsx  PaperNotes.tsx  Sidebar.tsx
frontend/src/hooks/: useQueries.ts
frontend/src/pages/: Dashboard.tsx  PaperDetail.tsx  PaperForm.tsx  PaperList.tsx  (+1 more)
nginx/: nginx.conf
scripts/: backup_db.sh  deploy.sh  setup_docker_proxy.sh
(+2 files in other folders)
